--- a/1- Python Basic/control_flow.ipynb
+++ b/1- Python Basic/control_flow.ipynb
@@ -4,21 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Control flow \n",
-    "if statement flows through the \n"
+    "## Control flow \n",
+    "If statement flows through the \n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -46,8 +34,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Nested Condition\n",
-    "###you create a if statement and then an elif statment and then if else statment for a nested statements"
+    "## Nested Condition\n",
+    "You create a if statement and then an elif statment and then if else statment for a nested statements"
    ]
   },
   {
