--- a/1- Python Basic/tupkes.ipynb
+++ b/1- Python Basic/tupkes.ipynb
@@ -140,10 +140,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Nikhil\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "## pakcing and unpacking of the tuples\n",
+    "\n",
+    "\n",
+    "## packing\n",
+    "packed_one = 1, \"Nikhil\", 3\n",
+    "\n",
+    "## unpakcing tuples\n",
+    "a,b,c = packed_one\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n"
+   ]
   },
   {
    "cell_type": "code",
