--- a/1- Python Basic/functions.ipynb
+++ b/1- Python Basic/functions.ipynb
@@ -20,122 +20,337 @@
     "\n",
     "def function_name(parameter):\n",
     "    \"\"\"docstring\"\"\"\n",
-    "    # function body\n",
+    "    # function body \n",
     "\n",
     "    return expression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "# why ruby???\n",
+    "num = 34\n",
+    "if num % 2 == 0:\n",
+    "    print(\"the number is even\")\n",
+    "else:\n",
+    "    print(\"the number is odd\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def evenOrOdd(num):\n",
+    "    \"\"\"this function will finds an even or odd\"\"\"\n",
+    "    if num % 2 == 0:\n",
+    "        print(\"the number is even\")\n",
+    "    else:\n",
+    "        print(\"the number is odd\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "evenOrOdd(24)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_two_numbers(a,b):\n",
+    "    sum = int(a+b)\n",
+    "    print(\"the sum of the numbers is: \",sum)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the sum of the numbers is:  9\n"
+     ]
+    }
+   ],
+   "source": [
+    "add_two_numbers(3,6)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello nikhil welcome to the python coding. \n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name):\n",
+    "    print(f\"Hello {name} welcome to the python coding. \")\n",
+    "\n",
+    "greet(\"nikhil\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello great welcome to the python coding. \n"
+     ]
+    }
+   ],
+   "source": [
+    "# default parameter\n",
+    "\n",
+    "def greet(name = \"great\"):\n",
+    "    print(f\"Hello {name} welcome to the python coding. \")\n",
+    "\n",
+    "greet()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# variable lenght argument\n",
+    "# positioinal and keyword Arguments\n",
+    "\n",
+    "def print_numbers(*nikhil):\n",
+    "    for i in (nikhil):\n",
+    "        print(i)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "Nikhil\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_numbers(1,2,3,4,5,6,\"Nikhil\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def print_numbers(*args):\n",
+    "    for i in (args):\n",
+    "        print(i)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:Nikhil\n",
+      "age:32\n",
+      "country:INdia\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Keyword Argument \n",
+    "\n",
+    "def print_defaults(**kwargs):\n",
+    "    for key,value in kwargs.items():\n",
+    "        print(f\"{key}:{value}\")\n",
+    "\n",
+    "print_defaults(name = \"Nikhil\", age = 32 , country = \"INdia\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def print_numbers(*args, **kwargs):\n",
+    "    for val in (args):\n",
+    "        print(f\"postional Arguments are: {val}\")\n",
+    "\n",
+    "    for key,value in kwargs.items():\n",
+    "        print(f\"{key}:{value}\")\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "postional Arguments are: 1\n",
+      "postional Arguments are: 12\n",
+      "postional Arguments are: Nikhil Singh\n",
+      "name:Nikhil\n",
+      "age:32\n",
+      "country:INdia\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_numbers(1,12,\"Nikhil Singh\", name = \"Nikhil\", age = 32 , country = \"INdia\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lambda Functions\n",
+    "they are small anonymous functoins defined using a Lambda keyword. They can have many number of arguments but only one expressions. They commonly used for short operations or argument for higher order functions \n",
+    "\n",
+    "lambda arguments : expressions"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'function'>\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "addtion = lambda a,b:a+b\n",
+    "print(type(addtion))\n",
+    "print(addtion(2,3))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [1,2,3,4,5,6]\n",
+    "list(map(lambda x:x**2, numbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map Functions\n",
+    "It applies to all the elements in the list "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# def square(x):\n",
+    "#     return x*x\n",
+    "\n",
+    "# square(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49, 64]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = [1,2,3,4,5,6,7,8]\n",
+    "\n",
+    "list(map(square, number))\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -201,7 +416,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.0"
   }
  },
