--- a/1- Python Basic/Import_package.ipynb
+++ b/1- Python Basic/Import_package.ipynb
@@ -93,10 +93,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from package.maths import addition\n",
+    "\n",
+    "addition(2,3)"
+   ]
   },
   {
    "cell_type": "code",
