--- a/1- Python Basic/file Handling/file_Operation.ipynb
+++ b/1- Python Basic/file Handling/file_Operation.ipynb
@@ -288,10 +288,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The path example.txt exists\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = 'example.txt'\n",
+    "if os.path.exists(path):\n",
+    "    print(f'The path {path} exists')\n",
+    "\n",
+    "else:\n",
+    "    print(f'The path {path} doesnt exists')"
+   ]
   },
   {
    "cell_type": "code",
