--- a/1- Python Basic/Exception Handling/Exception-1.ipynb
+++ b/1- Python Basic/Exception Handling/Exception-1.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -76,39 +76,144 @@
    "source": [
     "try:\n",
     "    result = 1/0\n",
+    "    a = b\n",
     "\n",
     "except ZeroDivisionError as x:\n",
     "    print(x)\n",
-    "    print(\"Enter the denominator > 0\")\n"
+    "    print(\"Enter the denominator > 0\")\n",
+    "\n",
+    "except Exception as ex1:\n",
+    "    print(ex1)\n",
+    "\n",
+    "    print(\"Main Exception got caught\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result is 0.43478260869565216\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    num = int(input(\"enter any number you want\"))\n",
+    "    result = 10/num\n",
+    "    print(result)\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"This is not a valid number\")\n",
+    "\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"enter the number greater than zero\")\n",
+    "\n",
+    "except Exception as ex1:\n",
+    "    print(ex1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result is 0.43478260869565216\n"
+     ]
+    }
+   ],
+   "source": [
+    "## try, except and else\n",
+    "try:\n",
+    "    num = int(input(\"enter any number you want\"))\n",
+    "    result = 10/num\n",
+    "    \n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"This is not a valid number\")\n",
+    "\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"enter the number greater than zero\")\n",
+    "\n",
+    "except Exception as ex1:\n",
+    "    print(ex1)\n",
+    "\n",
+    "else:\n",
+    "    print(f'The result is {result}')\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result is 0.43478260869565216\n",
+      "Execution Successfull\n"
+     ]
+    }
+   ],
+   "source": [
+    "## try, except, else and finally\n",
+    "try:\n",
+    "    num = int(input(\"enter any number you want\"))\n",
+    "    result = 10/num\n",
+    "    \n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"This is not a valid number\")\n",
+    "\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"enter the number greater than zero\")\n",
+    "\n",
+    "except Exception as ex1:\n",
+    "    print(ex1)\n",
+    "\n",
+    "else:\n",
+    "    print(f'The result is {result}')\n",
+    "\n",
+    "finally:\n",
+    "    print('Execution Successfull')\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World \n",
+      "How is the whether today its so pretty outside \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## file handling and Exception Handling\n",
+    "try:\n",
+    "    with open ('../file Handling/example.txt', 'r') as file:\n",
+    "        read_file = file.read()\n",
+    "        print(read_file)\n",
+    "\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print('The file doesnt exist')\n"
+   ]
   },
   {
    "cell_type": "code",
