--- a/1- Python Basic/OOPs/classesAndObjects.ipynb
+++ b/1- Python Basic/OOPs/classesAndObjects.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,6 +62,26 @@
     "dog1 = Dog(\"buddy\", 23)\n",
     "print(dog1.naam)\n",
     "print(dog1.saal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lucy\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "dog2 = Dog(\"Lucy\", 2)\n",
+    "print(dog2.naam)\n",
+    "print(dog2.saal)"
    ]
   },
   {
