--- a/1- Python Basic/OOPs/classesAndObjects.ipynb
+++ b/1- Python Basic/OOPs/classesAndObjects.ipynb
@@ -55,9 +55,13 @@
    "source": [
     "## instance Variable and method\n",
     "class Dog:\n",
+    "    ## constructor\n",
     "    def __init__(self,name,age):\n",
     "        self.naam = name\n",
     "        self.saal = age\n",
+    "\n",
+    "\n",
+    "## create objects\n",
     "\n",
     "dog1 = Dog(\"buddy\", 23)\n",
     "print(dog1.naam)\n",
@@ -83,6 +87,111 @@
     "print(dog2.naam)\n",
     "print(dog2.saal)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "buddy says woof\n"
+     ]
+    }
+   ],
+   "source": [
+    "## define a clas with instance methods\n",
+    "\n",
+    "class Dog:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def bark(self):\n",
+    "        print(f\"{self.name} says woof\")\n",
+    "\n",
+    "dog1 = Dog(\"buddy\", 2)\n",
+    "dog1.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000 is deposited. New balnce is 25000\n",
+      "The 5000 is Withdrawn. The balance is 20000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20000"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Modelling an bank account\n",
+    "\n",
+    "## define a class for bank account \n",
+    "\n",
+    "class BankAccount:\n",
+    "    def __init__(self, owner, balance = 0):\n",
+    "        self.owner = owner\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    def deposit(self, amount):\n",
+    "        self.balance += amount\n",
+    "        print(f'{amount} is deposited. New balnce is {self.balance}')\n",
+    "\n",
+    "    def withdraw(self, amount):\n",
+    "        if amount>self.balance:\n",
+    "            print(\"Insufficient Funds!!\")\n",
+    "\n",
+    "        else:\n",
+    "            self.balance -= amount\n",
+    "            print(f\"The {amount} is Withdrawn. The balance is {self.balance}\")\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        return self.balance\n",
+    "\n",
+    "## Create an account\n",
+    "account = BankAccount(\"Nikhil\", 23000)\n",
+    "account.deposit(2000)\n",
+    "account.withdraw(5000)\n",
+    "account.get_balance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
