new files added

--- a/1- Python Basic/logging.ipynb
+++ b/1- Python Basic/logging.ipynb
@@ -10,19 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:root:this is a debugging message\n",
-      "INFO:root:This is a info message\n",
-      "ERROR:root:This is a error messafe\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "\n",
@@ -36,19 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:root:this is a debugging message\n",
-      "INFO:root:This is a info message\n",
-      "ERROR:root:This is a error messafe\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Configuring logging\n",
     "\n",
@@ -210,24 +190,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(\n",
+    "    filename='app.log',\n",
+    "    filemode='w',\n",
+    "    level = logging.DEBUG,\n",
+    "    format = '%(asctime)s - %(name)s - %(message)s', \n",
+    "    datefmt = '%y - %m - %d %H:%M:%S'\n",
+    ")\n",
+    "\n",
+    "logging.debug(\"this is a debugging message\")\n",
+    "logging.info(\"This is a info message\")\n",
+    "\n",
+    "logging.error(\"This is a error messafe\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(logging.error(\"This is a error messafe\"))\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# logging.basicConfig(level = DEBUG)\n",
+    "logging.info(\"This is a info message\")"
+   ]
   },
   {
    "cell_type": "code",
